# game-of-life

./: 404.html  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  game_of_life-3787ed27d2feb40a.js  game_of_life-3787ed27d2feb40a_bg.wasm  game_of_life-d93c7232ba7c182d.js  game_of_life-d93c7232ba7c182d_bg.wasm  index.html  tailwind.config.js
.github/workflows/: deploy.yml  rust.yml
docs/: index.html
src/: main.rs
