[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
gloo = "0.11"
wasm-logger = "0.2"
log = "0.4"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.77", features = ["Window"] }
